Prettier everything kind of

--- a/app/assets/stylesheets/_game.css.sass
+++ b/app/assets/stylesheets/_game.css.sass
@@ -1,9 +1,14 @@
-.game
-  .title
-    text-align: left
-    margin-bottom: $ygrid
-    font-weight: 700
-  .team
-    .score
-      font-size: 24px
+.score
+  font-size: 36px
+  font-family: Lemon
+  line-height: 1em
+  display: inline-block
+  width: 5 * $grid
+  text-align: right
+  padding-right: $grid
+  float: left
+  color: #777
+  strong
+    color: #333
+.team
       
