--- a/app/assets/stylesheets/_layout.css.sass
+++ b/app/assets/stylesheets/_layout.css.sass
@@ -65,6 +65,9 @@ body
   
 .row
   margin-left: - $columns_gutter_width
+  
+.row.short
+  margin-bottom: 0
       
 // Span classes
 @for $colspan from 1 through $columns_count
@@ -82,9 +85,4 @@ body
   text-align: right
   input, .btn
     float: right
-    
-.score
-  .goals
-    font-size: 24px
-  //.players
   
