--- a/app/assets/stylesheets/_typo.css.sass
+++ b/app/assets/stylesheets/_typo.css.sass
@@ -5,10 +5,11 @@ body
 h1, h2, h3
   @include force_smoothing
   font:
-    family: 'PT Sans Caption', sans-serif
+    family: Lemon, cursive
     weight: 700
-  margin-bottom: $ygrid * 2
+  margin-bottom: 2 * $ygrid
   clear: both
+  line-height: 1em
   small
     color: #666
     font-size: 70%
@@ -17,15 +18,13 @@ h1, h2, h3
   
 h1
   font-size: 48px
-  line-height: 48px
   
 h2
   font-size: 36px
-  line-height: 36px
   
 h3
   font-size: 24px
-  line-height: 24px
+  font-family: Arial, sans-serif
  
 p
   margin-bottom: 2 * $ygrid
