--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,9 +1,4 @@
-
-%h1 Game #{resource.id}
-
-%p
-  %strong League:
-  = link_to resource.league.name, resource.league
+%h1= resource.name
   
 .row
   - resource.teams.each do |team|
@@ -12,9 +7,8 @@
       - team.players.each do |player|
         %h3= player.position
         .row= render :partial => 'users/user', :object => player.user
-        - rank_delta = Player.rank(player.rating) - Player.rank(player.user.rating_before(resource.created_at))
         .span2
-          %p= '%+0.2f' % rank_delta
+          %p= '%+0.2f' % player.rank_delta
         
 .section.actions
   = link_to 'Return to league', resource.league, :class => 'btn submit'
