...and slightly prettier again

--- a/app/assets/stylesheets/_game.css.sass
+++ b/app/assets/stylesheets/_game.css.sass
@@ -5,10 +5,11 @@
   display: inline-block
   width: 5 * $grid
   text-align: right
-  padding-right: $grid
-  float: left
-  color: #777
+  padding-left: $grid
+  float: right
+  color: #999
   strong
-    color: #333
+    color: #555
 .team
+  float: left
       
