...and back to basics

--- a/app/assets/stylesheets/_game.css.sass
+++ b/app/assets/stylesheets/_game.css.sass
@@ -5,11 +5,11 @@
   display: inline-block
   width: 5 * $grid
   text-align: right
-  padding-left: $grid
-  float: right
-  color: #999
+  padding-right: $grid
+  float: left
+  color: #777
   strong
-    color: #555
+    color: #444
 .team
   float: left
       
