--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     
     %link{:rel => "shortcut icon", :href => asset_path('favicon.ico')}/
     
-    %title Foosball Tracker. #{yield :title}
+    %title #{yield :title} - Foosball Tracker
     
   %body
     = render 'header'
