--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,8 +1,10 @@
 .row
   .span6
-    %h2 Awesome!
-    %p I'm super excited that you want to join. I'm quite honestly flattered.
+    %h2 What's your name?
+
+    %p I'm super excited that you want to join, but I don't know your name yet.
     
-    %p Just make your account and you'll be ready to start tracking foosball games like there's no tomorrow.
+    %p Just enter in your name and the email address and password you'd like to use to log in with and you'll be ready to go.
+    
   .span6
     = render 'form'
