--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -7,10 +7,14 @@
     %h3 Hey look! It's Zach's
     .spacer2
     %h1.wordmark
-      Foosball Tracker.
+      Foosball Tracker!
         
+    .section
+      It's pretty much the best way to keep track of who's the best
+    .section
+      - User.all.each do |user|
+        = image_tag(user.gravatar_url(:size => 32))
     .spacer
-    .spacer1
     .section
       = link_to 'Sounds neat, I want to join', sign_up_path, :class => 'btn submit'
       = link_to 'I already have an account', login_path, :class => 'btn'
