Fix asset compilation

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -22,7 +22,7 @@ body
   word-spacing: -1.0px
   @include rounded(bottom, 5px)
   text-shadow: rgba(0, 0, 0, 0.25) 1px 1px 1px
-  background: #333333 image_url("carbon_fibre_v2.png") center 0
+  background: #333333 image-url("carbon_fibre_v2.png") 0 0
   border-bottom: 1px solid #999
   line-height: 24px
   .wordmark
