Add hall of fame for longest games

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -27,7 +27,7 @@ textarea
   font: inherit
 
 input[type="submit"], .btn
-  float: left
+  display: inline-block
   font-size: 11.2px
   font-weight: 700
   padding: 3 * $grid/4 $grid
