--- a/app/views/leagues/_rankings.html.haml
+++ b/app/views/leagues/_rankings.html.haml
@@ -1,13 +1,16 @@
 - league = rankings
 %h2 Players
+
+- first_place = true
 - league.users.sort_by(&:current_rank).reverse.each do |user|
   .row
     .span1
       = link_to image_tag(user.gravatar_url(:size => 32)), user
   
     .span3
-      %strong #{user.name} (#{'%0.1f' % user.current_rank})
+      %strong #{user.name} #{image_tag('crown.png') if first_place} (#{'%0.1f' % user.current_rank})
       %br
       %small #{pluralize user.wins_count, 'win'}, #{pluralize user.losses_count, 'loss'}
+  - first_place = false
 
 %p= link_to 'Recalculate rankings', recalculate_ranks_league_path(league), :method => :post, :class => 'btn'
