Remove league feature

--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [resource.league, resource], :html => {:class => 'stacked'} do |f|
+= form_for [resource], :html => {:class => 'stacked'} do |f|
   = render :partial => 'shared/error_messages', :locals => {:target => resource} 
   .row
     = f.fields_for :teams do |team_form|
@@ -11,8 +11,8 @@
           .field
             = players_form.hidden_field :position
             = players_form.label :user_id, players_form.object.position
-            = players_form.collection_select :user_id, resource.league.users.order(:name).all, :id, :name
+            = players_form.collection_select :user_id, User.order(:name).all, :id, :name
         
   .section.actions
     = f.submit 'Save Game'
-    = link_to 'Cancel', resource.league, :class => 'btn'  
+    = link_to 'Cancel', resource, :class => 'btn'  
