Better rating recalculation

--- a/app/assets/stylesheets/_game.sass
+++ b/app/assets/stylesheets/_game.sass
@@ -1,6 +1,6 @@
 .score
   font-size: 36px
-  font-family: Lemon
+  font-family: Arvo
   line-height: 1em
   display: inline-block
   width: 5 * $grid
