--- a/app/assets/stylesheets/_typo.sass
+++ b/app/assets/stylesheets/_typo.sass
@@ -5,7 +5,7 @@ body
 h1, h2, h3
   @include force_smoothing
   font:
-    family: Lemon, cursive
+    family: Arvo, Georgia, serif
     weight: 700
   margin-bottom: 2 * $ygrid
   clear: both
@@ -39,7 +39,7 @@ a
     
 .wordmark
   font:
-    family: Pacifico, cursive
+    family: Arvo, Georgia, serif
     weight: bold
   color: #E67D49
   text-shadow: rgba(0, 0, 0, 0.16) 1px 1px 0
