--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
-    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Lemon|Pacifico'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Arvo:400,700|Lemon'
     
     %link{:rel => "shortcut icon", :href => asset_path('favicon.ico')}/
     
