--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -3,7 +3,7 @@
     .wordmark= link_to 'Foosball Tracker', (current_user ? games_path : root_path)
     %ul.links
       - if current_user
-        %li= link_to 'Record a Game', new_game_path
+        %li= link_to 'Games', games_path
         %li= link_to 'Profile', user_path(current_user)
         %li= link_to 'Sign out', logout_path
       - else
