--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -2,7 +2,7 @@
 
 %h1= resource.name
 
-%p #{l resource.created_at}
+%p Recorded #{l resource.created_at} in #{link_to resource.league.name, resource.league}
   
 .row
   - resource.teams.each do |team|
@@ -22,9 +22,9 @@
               (#{'%+0.2f' % player.rank_delta})
         
 .section.actions
-  = link_to 'Return to list', collection_path, :class => 'btn submit'
-  = link_to 'Edit game results', edit_resource_path, :class => 'btn'
+  = link_to 'Return to Office', league_path(resource.league), :class => 'btn submit'
+  = link_to 'Edit Results', edit_resource_path, :class => 'btn'
   - if resource.users.include?(current_user)
     .pull-right
-      = link_to 'Delete game', resource_path, :method => :delete, :confirm => 'Are you sure you want to delete this game?', :class => 'btn'
+      = link_to 'Delete Game', resource_path, :method => :delete, :confirm => 'Are you sure you want to delete this game?', :class => 'btn'
         
