--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -26,4 +26,4 @@
         %em You should #{link_to 'add one', new_resource_path}.
               
   .span4.right
-    = link_to 'Record a game', new_resource_path, :class => 'btn submit'
+    = link_to 'Record a game', new_resource_path, :class => 'btn btn-primary'
