--- a/app/views/leagues/_form.html.haml
+++ b/app/views/leagues/_form.html.haml
@@ -6,5 +6,5 @@
     = f.text_field :name
     
   .section.actions
-    = f.submit 'Save Office'
-    = link_to 'Cancel', resource, :class => 'btn'
+    = f.submit 'Save Office', :class => 'btn-primary'
+    or #{link_to 'cancel', resource}
