--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -16,6 +16,5 @@
         = image_tag(user.gravatar_url(:size => 32))
     .spacer
     .section
-      = link_to 'Sounds neat, I want to join', sign_up_path, :class => 'btn submit'
+      = link_to 'Sounds neat, I want to join', sign_up_path, :class => 'btn btn-primary'
       = link_to 'I already have an account', login_path, :class => 'btn'
-      
