--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -30,35 +30,34 @@ input[type="submit"], .btn
   display: inline-block
   font-size: 11.2px
   font-weight: 700
+  cursor: pointer
   padding: 3 * $grid/4 $grid
   @include rounded
-  border: 1px solid darken($primary_button_color, 15%)
-  color: #222
-  margin-right: $grid/2
-  line-height: 2 * $grid
-  cursor: pointer
-  //&:hover, &:focus
-   
-.btn
-  height: 17px
-  line-height: 17px
   color: #555
   @include gradient($secondary_button_color, darken($secondary_button_color, 10%))
   border: 1px solid darken($secondary_button_color, 15%)
   text-shadow: #fff 1px 1px 1px
   &:hover, &:focus
     @include gradient(lighten($secondary_button_color, 2%), darken($secondary_button_color, 5%)) 
-    
-input[type="submit"], .submit
-  @include gradient($primary_button_color, darken($primary_button_color, 10%))
-  text-shadow: lighten($primary_button_color, 10%) 1px 1px 1px
-  &:hover, &:focus
-    @include gradient(lighten($primary_button_color, 2%), darken($primary_button_color, 5%))
-    
   
+  &.btn-primary
+    border: 1px solid darken($primary_button_color, 15%)
+    color: #222
+    margin-right: $grid/2
+    @include gradient($primary_button_color, darken($primary_button_color, 10%))
+    text-shadow: lighten($primary_button_color, 10%) 1px 1px 1px
+    &:hover, &:focus
+      @include gradient(lighten($primary_button_color, 2%), darken($primary_button_color, 5%))
+   
+.btn
+  height: 19px
+  line-height: 19px
   
 a.btn
   text-decoration: none
+  
+input[type="submit"]
+  line-height: 2 * $grid
   
 .actions
   padding: $grid $grid * 2
